--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.blank {
+  color: rgb(39, 12, 127);
+}
+.container {
+  background: rgb(114, 220, 208);
+}
